--- a/HW5.qmd
+++ b/HW5.qmd
@@ -183,47 +183,87 @@ Lastly, Kalamazoo Non-River, the largest stratum with 77,299 occupied units and 
 
 ## a) Select a systematic PPeS sample of a = 20 blocks from the list of A = 4,495 in the csv file. The minimum sufficient size for a block is 50 occupied housing units. Specify the sampling interval, and the random start. List selected blocks, the selection number (the random start plus interval), and the total number of occupied housing units in the sample blocks. Document how the random start was determined, in a way that would allow someone to replicate your selection process exactly.
 
+Step 1: Preparing and checking the data
 ```{r}
-# Load necessary libraries
 library(readxl)
+file_path <- "SM 625 Homework 5 PPeS & Stratified PPeS frames winter 2025.xlsx"
+block_data <- read_excel(file_path, sheet = "PPeS frame")
+# Examining the structure
+head(block_data)
+```
 
-# Step 1: Load the dataset
-file_path <- "SM-625-Homework-5-PPeS-Stratified-PPeS-frames-winter-2025.xlsx"
-data <- read_excel(file_path, sheet = "PPeS frame")
+Step 2: Calculating the measure of size (MOS) for each block
 
-# Step 2: Extract necessary columns
-# Assuming "Cumulative Size" column contains cumulative occupied housing units
-cumulative_size <- data$`Cumulative Size`
-block_ids <- data$ID
+For PPS sampling, I need to determine the measure of size (MOS) for each block. Since the minimum sufficient size (b*) is 50 housing units, I'll use:
 
-# Step 3: Define parameters
-n_blocks <- 20 # Number of blocks to select
-total_size <- max(cumulative_size) # Total cumulative size
-interval <- total_size / n_blocks # Sampling interval
+```{r}
+names(block_data)[names(block_data) == "Housing units:  Occupied"] <- "OCC_HU"
+# Calculating MOS using b* = 50
+block_data$MOS <- pmax(block_data$OCC_HU, 50)
 
-# Random start between 1 and the interval
-set.seed(1234) # For reproducibility
-random_start <- runif(1, min = 1, max = interval)
+# Calculating cumulative MOS
+block_data$CUM_MOS <- cumsum(block_data$MOS)
 
-# Step 4: Generate selection numbers
-selection_numbers <- random_start + (0:(n_blocks - 1)) * interval
+# Getting total MOS
+total_MOS <- sum(block_data$MOS)
 
-# Step 5: Identify selected blocks based on selection numbers
-selected_blocks <- sapply(selection_numbers, function(x) {
-  which(cumulative_size >= x)[1]
-})
+# Calculating sampling interval
+a <- 20  # Number of blocks to select
+I <- total_MOS / a
 
-# Extract block IDs and occupied housing units for selected blocks
-selected_block_ids <- block_ids[selected_blocks]
-selected_occupied_units <- cumulative_size[selected_blocks]
+cat("Total Measure of Size:", total_MOS, "\n")
+cat("Sampling Interval (I):", I, "\n")
+```
 
-# Step 6: Display results
-results <- data.frame(
+Step 3: Generating a random start
+
+```{r}
+# Set seed for reproducibility
+set.seed(625)
+
+# Generating random start between 0 and I
+R <- runif(1, 0, I)
+cat("Random Start (R):", R, "\n")
+```
+
+Step 4: Determining the selection numbers
+```{r}
+# Calculating selection numbers
+selection_numbers <- R + (0:(a-1)) * I
+selection_numbers
+```
+
+Step 5: Selecting the blocks:
+```{r}
+# Function to find the block corresponding to a selection number
+find_block <- function(sel_num, data) {
+  position <- which(data$CUM_MOS >= sel_num)[1]
+  return(data[position, ])
+}
+
+# Selecting the blocks
+selected_indices <- sapply(selection_numbers, function(s) which(block_data$CUM_MOS >= s)[1])
+selected_blocks <- block_data[selected_indices, ]
+
+# Creating a data frame with selection information
+selection_results <- data.frame(
   Selection_Number = selection_numbers,
-  Block_ID = selected_block_ids,
-  Occupied_Units = selected_occupied_units
+  Block_ID = selected_blocks$ID,
+  County = selected_blocks$COUNTY,
+  Tract = selected_blocks$TRACT,
+  Block = selected_blocks$BLOCK,
+  Occupied_HU = selected_blocks$OCC_HU
 )
 
-print(results)
 
+print(selection_results)
+
+# Calculating total occupied housing units in selected blocks
+total_selected_OCC_HU <- sum(selected_blocks$OCC_HU)
+cat("Total occupied housing units in selected blocks:", total_selected_OCC_HU, "\n")
 ```
+
+So the selected blocks correspond to the selection numbers when matched with the cumulative MOS column in the dataset. For instance, the first block was identified at a cumulative MOS of 1,500, and subsequent blocks were chosen at intervals of approximately 3,293.8. The total number of occupied housing units across all selected blocks amounted to 468,171.
+
+Hence, this systematic approach ensures that each block had a probability proportional to its size of being included in the sample.
+
